# ward

./: .dependency-cruiser.cjs  .gitignore  AGENTS.md  CHANGELOG.md  README.md  TASKS.md  WARD_SPEC.md  config.json  package.json  persona.txt  pyproject.toml  state.json  tsconfig.base.json  tsconfig.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
adapters/: __init__.py
apps/cli/: package.json
apps/runtime/: package.json
apps/ui/: index.html  package.json
commands/: recap.md  summary.md  ward-init.md  ward.md
docs/task/: 001-codex-session-subscription-adapter.md  001-personal-orchestrator-command-center.md  002-runtime-skeleton.md  002-ward-buddy-skill.md  003-plugin-native-install-refactor.md  003-workspace-state.md  004-pre-response-hook.md  004-wiki-memory.md  005-warm-start-overview-handoff.md  006-plan-mode.md  007-harness-lifecycle.md  008-real-agent-adapters.md  009-mcp-connections.md  010-inbound-remote-messaging.md  011-learning-loop.md  012-hardening.md
hooks/: post_response.py  post_tool_use.py  session_end.py  session_start.py
legacy/npm/: README.md  package.json  postinstall.js  (+1 more)
runtime/: __init__.py  gating.py  session.py  turn.py
schemas/: __init__.py  events.py
scripts/: bootstrap.py  brain.py  check-layer-fixture.ts  claude_adapter.py  codex_adapter.py  init_project.py  postinstall.js  session_events.py  session_runtime.py  speak.py  state_store.py  summary_request.py  test_codex_observer.sh  turn_runtime.py  ward-codex-observe.js  ward-init.js  ward_codex_observe.py  ward_config.py  ward_paths.py
(+25 files in other folders)
