[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ward"
version = "0.1.0"
description = "Local-first personal developer command center and orchestrator."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Eleazar Junsan" }
]
dependencies = []

[project.scripts]
ward = "ward.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
